# hackathon-proiect

./: CMakeLists.txt  Proiect Hackathon 1.sln  auth.css  auth.html  forma.css  forma.html  index.html  main.cpp  signup.css  signup.html  style.css  styleLogin.css
Proiect Hackathon 1/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Proiect Hackathon 1.csproj
Proiect Hackathon 1/hackathon-proiect-main/sha256/: SHA256.h
Proiect Hackathon 1/hackathon-proiect-main/src/: AccountDatabaseManager.cpp  AccountDatabaseManager.h  DatabaseManager.cpp  Dumbster.cpp  Dumbster.h  DumbsterCLI.cpp  DumbsterCLI.h  DumbsterDatabaseManager.cpp  DumbsterDatabaseManager.h  DumbsterDatabaseManagerCLI.h
src/: DatabaseManager.h  Dumbster.h
